# MinerFr

./: README.md  clear.py  colors.py  lang.py  main.py  pyproject.toml  random.txt
file/: WOLFY.json  WoLfY.json  eure.json  wolfy.json
