[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_Miner"
version = "1.5.1"
[tool.poetry.dependencies]
getkey = "^0.6.5"
python = "^3.8"
[tool.poetry.dev-dependencies]
